Fix text overflow

--- a/client/components/main/Main/Database/index.scss
+++ b/client/components/main/Main/Database/index.scss
@@ -42,4 +42,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  &[contenteditable="true"] {
+    span {
+      text-overflow: clip;
+    }
+  }
 }
